# RPU

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  concept.md  goal.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-docs.yml  rust.yml
crates/rpu-build/: Cargo.toml
crates/rpu-build/src/: lib.rs
crates/rpu-core/: Cargo.toml
crates/rpu-core/src/: lib.rs  tests.rs
crates/rpu-runtime/: Cargo.toml
crates/rpu-runtime/src/: lib.rs
crates/rpu-scenevm/: Cargo.toml
crates/rpu-scenevm/src/: lib.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tree-sitter-rpu.config.json
docs/docs/: cli.md  examples.md  getting-started.md  install.md  intro.mdx  maps.md  project-structure.md  scenes.md  scripts.md  status.md
docs/patches/: @docusaurus+bundler+3.10.0.patch
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/src/pages/play/: warped-space-shooter.tsx
docs/src/rehype/: rehypeTreeSitterRpu.ts
docs/static/: CNAME
editors/zed-rpu/: README.md  extension.toml
editors/zed-rpu/languages/rpu/: config.toml  highlights.scm  outline.scm
examples/: README.md  bricks.rpu  bricks.wat  disc.rpu  disc.wat  fib.rpu  fib.wat  main.rpu  main.wat  path.rpu  path.wat  phong.rpu  phong.wat  raymarch.rpu  raymarch.wat  rpu.rpu  rpu.wat  utilities.rs  while.rpu  while.wat
examples/hello_shapes/: .gitignore  rpu.toml
examples/hello_shapes/scenes/: main.rpu
examples/hello_shapes/scripts/: main.rpu
examples/jumpnrun/: README.md  rpu.toml
examples/jumpnrun/scenes/: main.rpu
examples/jumpnrun/scripts/: patrol.rpu  player.rpu
examples/pinball/: README.md  concept.md  rpu.toml
examples/pinball/scenes/: main.rpu
examples/pinball/scripts/: ball.rpu
examples/sunnyland/: README.md  rpu.toml
examples/sunnyland/scenes/: main.rpu
examples/sunnyland/scripts/: patrol.rpu  pickup.rpu  player.rpu
examples/terrain/: rpu.toml
examples/terrain/scenes/: main.rpu
examples/terrain/scripts/: main.rpu
examples/terrain_playground/: rpu.toml
examples/terrain_playground/scenes/: main.rpu
examples/terrain_playground/scripts/: main.rpu
examples/warped_space_shooter/: rpu.toml
examples/warped_space_shooter/scenes/: game.rpu  game_over.rpu  main.rpu  menu.rpu
examples/warped_space_shooter/scripts/: game.rpu  hud.rpu  player.rpu  spawner.rpu
rpu/: Cargo.toml  Readme.md
rpu/src/: ast.rs  ast_value.rs  buffer.rs  compile.rs  ctx.rs  environment.rs  error.rs  interpret.rs  lib.rs  parser.rs  preprocessor.rs  print.rs  rpu.rs  scanner.rs  varverifier.rs
rpu/src/tests/: mod.rs
rpuc/: Cargo.toml  Readme.md
rpuc/src/: main.rs
src/: main.rs
tree-sitter-rpu/: README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-rpu/queries/: highlights.scm  locals.scm
tree-sitter-rpu/src/: grammar.json  node-types.json  parser.c
tree-sitter-rpu/test/corpus/: core.txt
