[package]
name = "rpu"
version = "0.2.5"
edition = "2021"
description = "RPU is a GLSL like programming language which compiles to WebAssembly (WAT). Fast and embeddable."
license = "MIT"
keywords = ["language", "glsl", "graphics", "shader", "rendering"]
repository = "https://github.com/markusmoenig/RPU.git"

[dependencies]
rustc-hash = "1.1.0"
wasmer = "4.3.0"
image = "0.25.1"
num_cpus = "1.16.0"
rand = "0.8.5"
