[package]
name = "rpuc"
version = "0.3.0"
edition = "2021"
license = "MIT"
keywords = ["language", "glsl", "graphics", "shader", "rendering"]
repository = "https://github.com/markusmoenig/RPU.git"
description = "This is the standalone compiler for RPU, a GLSL-compatible language for rendering procedural graphics on the CPU."

[dependencies]
rpu = { version = "0.3.0", path = "../rpu" }
clap = "4.4.11"
