[package]
name = "rpu-scenevm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
console_error_panic_hook = "0.1"
fontdue.workspace = true
image.workspace = true
pollster.workspace = true
rpu-core = { path = "../rpu-core" }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
wgpu.workspace = true
web-sys = { version = "=0.3.77", features = ["Document", "DomRect", "Element", "EventTarget", "HtmlCanvasElement", "HtmlElement", "KeyboardEvent", "MouseEvent", "WheelEvent", "Window", "CssStyleDeclaration", "console"] }
winit.workspace = true
