[package]
name = "rpu-scenevm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64 = "0.22"
bytemuck.workspace = true
console_error_panic_hook = "0.1"
fontdue.workspace = true
image.workspace = true
pollster.workspace = true
rpu-core = { path = "../rpu-core" }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
wgpu.workspace = true
web-sys = { version = "=0.3.77", features = ["Document", "DomRect", "Element", "EventTarget", "HtmlAudioElement", "HtmlCanvasElement", "HtmlElement", "KeyboardEvent", "MouseEvent", "WheelEvent", "Window", "CssStyleDeclaration", "console"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "tvos"), not(target_os = "ios")))'.dependencies]
rodio = "0.20"
winit.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "tvos", target_os = "ios")))'.dependencies]
lewton = "0.10"
